# transcribe

./: AGENTS.md  README.md  pyproject.toml
src/transcribe/: __init__.py  audio.py  cli.py  diarize.py  metrics.py  report_html.py
