[project]
name = "transcribe"
version = "0.1.0"
description = "Local Hebrew/English audio→text CLI (ivrit.ai models on faster-whisper)"
# Upper bound: the diarization stack (torch/torchaudio/pyannote) lags Python
# releases — 3.14 pulls torchaudio 2.11 which dropped APIs pyannote needs.
# 3.12 is the well-supported target for the whole stack.
requires-python = ">=3.10,<3.13"
dependencies = [
    "faster-whisper>=1.1.0",
]

# Optional extras — install only what you need.
[project.optional-dependencies]
# Speaker labels (diarization) — classic, token-free, fully local.
# Per-segment ECAPA voice embeddings (SpeechBrain, public model — no HF login,
# no gated terms) + agglomerative clustering. Model fetched once, then offline.
#   uv sync --extra speakers
speakers = [
    "speechbrain>=1.0",
    "scikit-learn>=1.3",
    # speechbrain 1.x uses torch.amp.custom_fwd (added in torch 2.4).
    "torch>=2.4",
    "torchaudio>=2.4",
]
# Heavy neural denoise for --denoise (DeepFilterNet CLI).
#   uv sync --extra denoise
denoise = [
    "deepfilternet>=0.5.6",
]
# Real WER scoring for --ab --reference.
#   uv sync --extra eval
eval = [
    "jiwer>=3.0",
]

[project.scripts]
transcribe = "transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]
